[gd_scene load_steps=6 format=3 uid="uid://b1xuyrgyw8tpb"]

[ext_resource type="Script" path="res://freezer.gd" id="1_onc8k"]
[ext_resource type="Texture2D" uid="uid://cyxsyj2koi3it" path="res://Field Sprites/WIP freezer.png" id="2_f7bha"]
[ext_resource type="Texture2D" uid="uid://e55v0agtd7ue" path="res://exclamation-removebg-preview.png" id="3_aqw0i"]
[ext_resource type="Texture2D" uid="uid://mmkoe2koc1mg" path="res://TextBox2HatTransparent.png" id="4_obpt0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_epf3o"]
size = Vector2(74, 146)

[node name="freezers" type="Node2D"]
script = ExtResource("1_onc8k")

[node name="hat_freezer" type="StaticBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="hat_freezer"]
position = Vector2(266, 270.125)
scale = Vector2(0.530612, 0.615145)
texture = ExtResource("2_f7bha")

[node name="hitbox" type="CollisionShape2D" parent="hat_freezer"]
position = Vector2(264, 269)
shape = SubResource("RectangleShape2D_epf3o")

[node name="hat_freezer_action_area" type="Area2D" parent="hat_freezer"]
position = Vector2(73, 58)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="hat_freezer/hat_freezer_action_area"]
position = Vector2(186, 176)
polygon = PackedVector2Array(-37, 107, -24, 114, -7, 114, 10, 113, 26, 112, 46, 110, 47, 102, 44, -42, -16, -42, -34, -41, -37, 89, -40, 90, -38, -46, 11, -45, 48, -44, 51, 96, 49, 116, 17, 117, -38, 113, -35, 98)

[node name="hat_freezer_indicator" type="Sprite2D" parent="hat_freezer"]
visible = false
position = Vector2(277, 154)
scale = Vector2(0.475758, 0.471429)
texture = ExtResource("3_aqw0i")

[node name="textbox" type="Sprite2D" parent="."]
visible = false
position = Vector2(258.75, 120.25)
scale = Vector2(1.07078, 1.0913)
texture = ExtResource("4_obpt0")

[node name="textbox_text" type="Label" parent="textbox"]
offset_left = -63.0
offset_top = -40.0
offset_right = 106.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "!!!!!!!!!!!!!!!!!"
autowrap_mode = 2

[connection signal="body_entered" from="hat_freezer/hat_freezer_action_area" to="." method="_on_hat_freezer_action_area_body_entered"]
[connection signal="body_exited" from="hat_freezer/hat_freezer_action_area" to="." method="_on_hat_freezer_action_area_body_exited"]
